# euler

./: .gitignore  001.c  002.c  Cargo.toml  LICENSE  Makefile  README.md
archive/lib/ntc/: prime.c
archive/src/: 014.c  016.c  020.c  022.c  024.c  029.c  030.c  032.c  036.c  045.c  048.c  050.cpp  055.c  056.c  067.c  070.cpp  072.cpp  076.c
c/lib/ntc/: fraction.c  fraction.h
c/src/: 010.c  015.c  023.c  025.c  026.c  028.c  031.c  037.c  044.cpp  058.cpp  069.cpp  071.cpp  080.c  087.cpp  096.cpp  097.c  099.c  run
julia/: 001.jl  003.jl  005.jl  006.jl
lib/libnt/: nt.hpp
lib/libnt/_test/: a.out  pf.cpp  test.cpp
lib/libnt/la/: vec.hpp
lib/libnt/nt/: ntf.hpp
lib/libnt/prime/: factor.hpp  sieve.hpp  test.hpp
lib/nt/_test/: a.out  pf.cpp  test.cpp
lib/nt/nt/: fib.hpp  nt.hpp  ntf.hpp
lib/nt/prime/: sieve.hpp  (+2 more)
lib/ntc/: hashmap.c  prime.h
lib/poker/: Cargo.toml
res/: 089.data  096.data
rust/: Cargo.toml  README.md
rust/src/: 001.rs  051.rs  061.rs  064.rs  066.rs  068.rs  074.rs  098.rs  100.rs  104.rs  125.rs  160.rs  231.rs  297.rs
src/: 003.c  003.rs  004.c  005.c  006.c  007.c  008.c  009.c  010.c  011.c  012.c  013.c  014.c  017.c  018.c  019.c  021.c  022.c  023.c  026.c  027.c  033.c  034.c  035.c  037.c  038.c  039.c  040.c  041.c  042.c  043.cpp  045.c  047.c  049.cpp  051.rs  052.c  053.c  056.c  057.c  058.cpp  (+35 more)
src/func/: common.c  common.h  hashmap.c  hashmap.h  prime.c  prime.h  random.c  random.h  types.h
zig/lib/: c_allocator.zig
zig/src/: 001.zig  002.zig  078.zig  112.zig  116.zig  117.zig  145.zig  214.zig  build.zig
(+6 files in other folders)
